--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,10 @@ a {
     color: inherit;
 }
 
+.mr30 {
+    margin-right: 30px;
+}
+
 .container {
     max-width: 1240px;
     width: 100%;
@@ -240,12 +244,13 @@ a {
 }
 
 .intro-content {
+    width: 50%;
     margin-top: 40px;
     margin-right: 200px;
 }
 
 .intro-photo {
-    width: 100%;
+    width: 50%;
 }
 
 .intro-photo-size {
@@ -277,12 +282,72 @@ a {
 }
 
 .content-text {
+    margin-bottom: 20px;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
     line-height: 150%;
     color: #EFFFE7;
+}
+
+
+/* BUTTON ---*/
+
+.butt {
+    border-radius: 6px;
+    padding: 10px 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.butt-instal {
+    display: flex;
+    justify-content: space-between;
+}
+
+.butt-green {
+    background: #1FB14D;
+    border: 1px solid  #1FB14D;
+    color: #fff;
+    transition: background-color .2s;
+}
+
+.butt-green:hover {
+    background-color: #199C3D;
+    border-color: #199C3D;
+}
+
+.butt-green-border {
+    border: 1px solid #16C54D;
+    font-size: 26px;
+    line-height: 150%;
+    padding: 8px 30px;
+    color: #16C54D;
+    transition: color .2s;
+}
+
+.butt-green-border:hover {
+    color: #16C54D;
+    border-color: #16C54D;
+}
+
+/***********ICON_FIXET*********/
+
+.icon-social {
+    padding: 44px 20px;
+    position: absolute;
+    top: 365px;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    background: #FFFFFF;
+    border-radius: 6px 0 0 6px;
+}
+
+.icon-fixet {
+    margin-bottom: 30px;
+    
 }
 
 
