--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,80 @@ a {
     
 }
 
+.video {
+    margin-bottom: 30px;
+}
 
+.title-instal {
+    display: flex;
+    margin-bottom: 120px;
+}
+
+.text-instal {
+    font-family: 'Comfortaa', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 150%;
+    color: #1FB14D;
+}
+
+.arrow-next {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.arrow-next::before {
+    content: "";
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 41px;
+    height: 13px;
+    background-repeat: no-repeat;
+    background-image: url('../img/icon/next.svg');
+}
+
+.sms-apple {
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.info-photo {
+    width: 100%;
+}
+
+.info-funtome {
+    position: absolute;
+    margin-top: 133px;
+    width: 50%;
+}
+
+.title-info {
+    margin-bottom: 30px;
+    font-family: 'Comfortaa', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 150%;
+    color: #F02B53;
+}
+
+.text-info {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 150%;
+    color: #333333;
+
+}
+
+.style-text {
+    margin-bottom: 10px;
+}
 
 
 
