--- a/css/style.css
+++ b/css/style.css
@@ -362,12 +362,13 @@ a {
 .icon-social {
     padding: 44px 20px;
     position: absolute;
-    top: 365px;
+    top: 0;
     right: 0;
     display: flex;
     flex-direction: column;
     background: #FFFFFF;
     border-radius: 6px 0 0 6px;
+    transform: translateY(115%);
 }
 
 .icon-fixet {
@@ -376,6 +377,7 @@ a {
 }
 
 .video {
+    margin-top: 100px;
     margin-bottom: 30px;
 }
 
@@ -548,8 +550,57 @@ a {
     display: flex;
     background: #FFFFFF;
     border-radius: 6px 6px 0 0;
+    transform: translateX(175%);
     
 }
 
+.mail {
+    display: flex;
+    
+}
+
+.mail::before {
+    content: "";
+    margin-right: 15px;
+    background-image: url('/img/icon/mail.svg');
+    width: 34px;
+    height: 26px;
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+
+/*********SLIDER**********/
+
+/* .form-slider {
+   
+}
+
+.form-slider::before {
+    content: "";
+    display: flex;
+    margin: 0 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 13px;
+    background-repeat: no-repeat;
+    background-image: url('../img/icon/next_slider.svg');
+}
+
+.form-style {
+    transform: translateY(-60px);    
+}
+
+
+
+.photo-style {
+    width: 124px;
+    height: 124px;
+
+} */
 
 
