--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ a {
 }
 
 .video {
-    margin-top: 100px;
+    margin-top: 60px;
     margin-bottom: 30px;
 }
 
@@ -574,11 +574,20 @@ a {
 
 /*********SLIDER**********/
 
+
 .form-slider {
     position: relative;
+    transform: translateY(-60px);  
 }
 
-/* .form-slider::before {
+.owl-carousel .owl-nav {
+    height: 0;
+}
+
+.owl-carousel .owl-nav button span {
+    font-size: 0;
+}
+.owl-carousel .owl-nav button::before {
     content: "";
     display: flex;
     margin: 0 20px;
@@ -588,21 +597,80 @@ a {
     width: 50px;
     height: 13px;
     background-repeat: no-repeat;
-    background-image: url('../img/icon/next_slider.svg');
-} */
-
-.form-style {
-    
-    transform: translateY(-60px);    
+    position: absolute;
+    top: 50%;
 }
 
+.owl-carousel .owl-nav button.owl-prev::before {
+    background-image: url('../img/icon/prev_slider.svg');
+    left: -10px;
+    transform: translate(-100%, -50%);
+}
 
+.owl-carousel .owl-nav button.owl-next::before {
+    background-image: url('../img/icon/next_slider.svg');
+    right: -10px;
+    transform: translate(100%, -50%);
+}
+
+.owl-carousel .owl-dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    position: absolute;
+    left: 50%;
+    bottom: -20px;
+    transform: translate(-50%, 100%);
+}
+
+.owl-carousel button.owl-dot {
+    width: 7px;
+    height: 7px;
+    padding: 4.5px;
+    background: #ECECEC;
+    border-radius: 50%;
+    margin-right: 15.5px;
+}
+
+.owl-carousel button.owl-dot:last-child {
+    margin-right: 0;
+}
+
+.owl-carousel button.owl-dot.active {
+    width: 16px;
+    height: 16px;
+    padding: 0;
+    background: #EB6171;
+}
+
+.form-style {
+    width: 400px;
+}
+
+.owl-slider-1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.slide {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 10px 0;
+    width: 100%;
+    height: 260px;
+}
 
 .photo-style {
-    position: absolute;
-    top: -35px;
-    left: 50%;
-    transform: translateX(-50%);
     width: 124px;
     height: 124px;
 }
@@ -612,10 +680,7 @@ a {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%);
+    margin-bottom: 20px;
 
 }
 
@@ -627,11 +692,16 @@ a {
     line-height: 150%;
     text-align: center;
     color: #333333;
+    max-width: 380px;
 }
 
 .green {
     margin-left: 7px;
     color:#199C3D;
+}
+
+.owl-carousel.owl-theme-1 .owl-item img {
+    width: auto;
 }
 
 
