--- a/css/style-funtome-features.css
+++ b/css/style-funtome-features.css
@@ -1,362 +1,4 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font-family: inherit;
-    font-weight: inherit;
-    font-style: inherit;
-    vertical-align: baseline;
-    box-sizing: border-box;
-}
 
-body {
-    line-height: 1;
-    color: #00353F;
-    font-family: 'Comfortaa', sans-serif;
-    font-weight: 400;
-    font-size: 0.9rem;
-    -webkit-text-size-adjust: none;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-img {
-    max-width: 100%;
-}
-
-a,
-a:hover {
-    text-decoration: none;
-}
-
-a {
-    color: inherit;
-}
-.mr25 {
-    margin-right: 25px;
-}
-
-.mr30 {
-    margin-right: 30px;
-}
-
-.mr50 {
-    margin-right: 50px;
-}
-
-.mr68 {
-    margin: 0 68px;
-}
-
-.container {
-    max-width: 1240px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    /* padding-left: 20px;
-    padding-right: 20px; */
-}
-
-.container-center {
-    max-width: 1240px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    position: relative;
-}
-
-.section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-/*==========header========================*/
-
-.header {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-}
-
-
-.header-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 37px;
-    padding-bottom: 37px;
-}
-
-.header-inner {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    padding: 20px 0;
-}
-
-.logo {
-    margin-right: 20px;
-}
-
-.nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.nav-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.nav-list li:first-child {
-    margin-left: 0;
-}
-
-.nav-list li {
-    font-family: 'Comfortaa', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    padding: 3px 25px;
-    font-size: 15px;
-    line-height: 17px;
-    letter-spacing: 0.15em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-}
-
-.nav-list li:hover {
-    background: #199C3D;
-}
-
-.instal-apple {
-    margin-right: 20px;
-}
-
-
-/*===================intro=================*/
-
-.intro {
-    flex-direction: column;
-    height: auto;
-    position: relative;
-    background-size: cover;
-    
-}
-
-.intro-banner {
-    z-index: -1000;
-}
-
-.intro-container {
-    display: flex;
-    position: absolute;
-    left: 0;
-    top: 230px;
-    
-}
-
-.intro-content {
-    width: 50%;
-    margin-top: 40px;
-    margin-right: 200px;
-}
-
-.intro-photo {
-    width: 50%;
-}
-
-.intro-photo-size {
-    width: 100%;
-   
-}
-
-.content-title {
-    margin-bottom: 50px;
-}
-
-/* .text-title {
-    font-family: 'Montserrat Subrayada', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 90px;
-    line-height: 100%;
-    text-transform: uppercase;
-    color: #FFF;
-    mix-blend-mode: multiply;
-    text-shadow: 0 0 8px rgba(0,0,0,5), 0 2px 4px rgba(0,0,0,0.7);
-} */
-
-.contetnt-subtitle {
-    display: flex;
-    margin-bottom: 80px;
-}
-
-.text-subtitle, .text-red {
-    font-family: 'Comfortaa', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 150%;
-    color: #FFFFFF; 
-}
-
-.text-red {
-    margin-left: 10px;
-    color: #F02B53;
-}
-
-.content-text {
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 150%;
-    color: #EFFFE7;
-}
-
-/*===================Intro_End=================*/
-
-
-
-
-/***********ICON_FIXET*********/
-
-.icon-social {
-    padding: 44px 20px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    background: #FFFFFF;
-    border-radius: 6px 0 0 6px;
-    transform: translateY(115%);
-}
-
-.icon-fixet {
-    margin-bottom: 30px;
-    
-}
-
-
-
-
-/********** DETALIS-TEXT**************/
-
-.detalis-text {
-    display: flex;
-    margin-bottom: 203px;
-}
-
-.text {
-    font-family: 'Comfortaa', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 30px;
-    line-height: 150%;
-    color: #1FB14D;
-    align-items: center;
-}
 
 /*********Features*******/
 
@@ -388,6 +30,7 @@ a {
 
 .title {
     position: absolute;
+    left: 10px;
     top: 50%;
     transform: translateY(-50%);
     font-family: 'Comfortaa', sans-serif;
@@ -415,33 +58,6 @@ a {
 
 /* BUTTON ---*/
 
-.butt {
-    border-radius: 6px;
-    padding: 15px 30px;
-    justify-content: center;
-    align-items: center;
-    text-transform: uppercase;
-}
-
-.butt-mobile {
-    display: flex;
-    justify-content: space-between;
-}
-
-.butt-instal {
-    border-radius: 6px;
-    padding: 9px 20px 6px 20px;
-    justify-content: center;
-    align-items: center;
-}
-
-.butt-green {
-    background: #1FB14D;
-    border: 1px solid  #1FB14D;
-    color: #fff;
-    transition: background-color .2s;
-}
-
 .butt-text-green {
     font-family: 'Comfortaa', sans-serif;
     font-style: normal;
@@ -452,147 +68,11 @@ a {
     color: #1FB14D;
 }
 
-.butt-green:hover {
-    background-color: #199C3D;
-    border-color: #199C3D;
-}
-
-.butt-green-border {
-    border: 2px solid #1FB14D;
-    color: #16C54D;
-}
-
-.butt-green-border:hover {
-    color: #16C54D;
-    border-color: #16C54D;
-}
-
 .butt-group {
     display: flex;
 }
 
-/*********Arrow**********/
 
-.arrow-next {
-    display: flex;
-    align-items: center;
-}
-
-.arrow-next::before {
-    content: "";
-    display: flex;
-    margin: 0 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 41px;
-    height: 13px;
-    background-repeat: no-repeat;
-    background-image: url('../img/icon/next.svg');
-}
-
-/*********CONDITIUNS************/
-
-.conditiuns {
-    display: flex;
-}
-
-.style-conditions {
-    font-family: 'Comfortaa', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 15px;
-    line-height: 17px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15em;
-    text-transform: uppercase;
-    color: #FD4B6F;
-}
-
-/*********FOOTER********/
-
-.footer {
-    margin-top: 30px;
-    background-color: #465B6F;
-}
-
-.footer-container {
-    position: relative;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 39px;
-    padding-bottom: 120px;
-}
-
-.footer-funtome {
-    display: flex;
-    align-items: center;
-    margin-bottom: 80px;
-}
-
-.funtome-text {
-    font-family: 'Comfortaa', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 45px;
-    line-height: 50px;
-    display: flex;
-    align-items: center;
-    color: #FFFFFF;
-}
-.icon-style {
-    width: 50px;
-    height: 55px;
-}
-
-.address {
-    margin: 0 60px;
-}
-
-.footer-contact {
-    display: flex;
-    justify-content: center;
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 150%;
-    align-items: center;
-    color: #FFFFFF;
-
-}
-
-.icon-social-footer {
-    position: absolute;
-    bottom: 0;
-    padding: 20px 44px;
-    display: flex;
-    background: #FFFFFF;
-    border-radius: 6px 6px 0 0;
-    transform: translateX(175%);
-    
-}
-
-.mail {
-    display: flex;
-    
-}
-
-.mail::before {
-    content: "";
-    margin-right: 15px;
-    background-image: url('/img/icon/mail.svg');
-    width: 34px;
-    height: 26px;
-    background-repeat: no-repeat;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-/*********FOOTER_End********/
 
 
 
