--- a/css/style-funtome-blog.css
+++ b/css/style-funtome-blog.css
@@ -1,4 +1,26 @@
 
+
+
+.intro-features {
+    width: 100%;
+    height: auto;
+    position: relative;
+}
+
+.features-container {
+    position: absolute;
+    /* top: -50%; */
+    transform: translateY(90%);
+} 
+
+.features-banner-title {
+    width: 100%;
+}
+
+.content-title-features {
+    margin-bottom: 50px;
+}
+
 /*********Blog Menu*************/
 
 .blog-menu {
@@ -51,13 +73,13 @@
 .news-iteam {
     display: flex;
     flex-wrap: wrap;
+    margin: 0 -20px;
 }
 
 .news-section {
     width: 50%;
     margin-top: 50px;
-    margin-bottom: 50px;
-    
+    margin-bottom: 50px;    
 }
 
 .img-news {
