--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,8 @@ a {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    /* padding-left: 20px;
+    padding-right: 20px; */
 }
 
 .container-center {
