--- a/css/style.css
+++ b/css/style.css
@@ -372,14 +372,14 @@ a {
 
 .icon-social {
     padding: 44px 20px;
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 50%;
     right: 0;
     display: flex;
     flex-direction: column;
     background: #FFFFFF;
     border-radius: 6px 0 0 6px;
-    transform: translateY(115%);
+    transform: translateY(-50%);
 }
 
 .icon-fixet {
@@ -504,8 +504,12 @@ a {
 
 
 /*********FOOTER********/
+footer {
+    width: 100%;
+}
 
 .footer {
+    width: 100%;
     margin-top: 30px;
     background-color: #465B6F;
 }
