--- a/css/style-funtome-blog.css
+++ b/css/style-funtome-blog.css
@@ -83,7 +83,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
 }
 
 .img-news {
@@ -155,3 +154,5 @@
 .news-data {
     align-items: center;
 }
+
+.
