--- a/css/style-funtome-blog.css
+++ b/css/style-funtome-blog.css
@@ -58,6 +58,10 @@
 
 /*************News*************/
 
+.news {
+    margin-bottom: 50px;
+}
+
 .news-title-first {
     font-family: 'Comfortaa', sans-serif;
     font-style: normal;
@@ -155,4 +159,41 @@
     align-items: center;
 }
 
-.
+/*********section-pages*******/
+
+.section-pages {
+    width: 100%;
+    margin-bottom: 120px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.pages {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: baseline;
+}
+
+.pages-style {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 140.62%;
+    color: #5E6973;
+    margin-left: 18px;
+}
+
+.pages li:first-child {
+    margin-left: 0;
+}
+
+.active {
+    font-style: bold;
+    font-size: 26px;
+    color: rgb(0, 0, 0);
+}
+
