--- a/css/style-funtome-blog.css
+++ b/css/style-funtome-blog.css
@@ -197,3 +197,14 @@
     color: rgb(0, 0, 0);
 }
 
+/*********popular-articles*******/
+
+.popular-articles {
+    margin-bottom: 200px;
+}
+
+.slider-popular {
+    margin-top: 50px;
+}
+
+
