--- a/js/owlCarousel/owl.theme.default.css
+++ b/js/owlCarousel/owl.theme.default.css
@@ -6,45 +6,228 @@
 /*
  * 	Default theme - Owl Carousel CSS File
  */
-.owl-theme .owl-nav {
-  margin-top: 10px;
-  text-align: center;
-  -webkit-tap-highlight-color: transparent; }
-  .owl-theme .owl-nav [class*='owl-'] {
-    color: #FFF;
-    font-size: 14px;
-    margin: 5px;
-    padding: 4px 7px;
-    background: #D6D6D6;
-    display: inline-block;
-    cursor: pointer;
-    border-radius: 3px; }
-    .owl-theme .owl-nav [class*='owl-']:hover {
-      background: #869791;
-      color: #FFF;
-      text-decoration: none; }
-  .owl-theme .owl-nav .disabled {
-    opacity: 0.5;
-    cursor: default; }
 
-.owl-theme .owl-nav.disabled + .owl-dots {
-  margin-top: 10px; }
 
-.owl-theme .owl-dots {
+
+ /*********slider.owl-theme-1**********/
+
+
+.form-slider {
+  position: relative;
+  transform: translateY(-60px);
+}
+
+/* .owl-carousel.owl-theme-1 .owl-nav {
+  height: 0;
+} */
+
+.owl-carousel.owl-theme-1 .owl-nav button span {
+  font-size: 0;
+}
+
+.owl-carousel.owl-theme-1 .owl-nav button::before {
+  content: "";
+  display: flex;
+  margin: 0 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 13px;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 50%;
+}
+
+.owl-carousel.owl-theme-1 .owl-nav button.owl-prev::before {
+  background-image: url('/img/icon/prev_slider.svg');
+  left: -10px;
+  transform: translate(-100%, -50%);
+}
+
+.owl-carousel.owl-theme-1 .owl-nav button.owl-next::before {
+  background-image: url('/img/icon/next_slider.svg');
+  right: -10px;
+  transform: translate(100%, -50%);
+}
+
+.owl-carousel.owl-theme-1 .owl-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  position: absolute;
+  left: 50%;
+  bottom: -20px;
+  transform: translate(-50%, 100%);
+}
+
+.owl-carousel.owl-theme-1 button.owl-dot {
+  width: 7px;
+  height: 7px;
+  padding: 4.5px;
+  background: #ECECEC;
+  border-radius: 50%;
+  margin-right: 15.5px;
+}
+
+.owl-carousel.owl-theme-1 button.owl-dot:last-child {
+  margin-right: 0;
+}
+
+.owl-carousel.owl-theme-1 button.owl-dot.active {
+  width: 16px;
+  height: 16px;
+  padding: 0;
+  background: #EB6171;
+}
+
+.form-style {
+  width: 400px;
+}
+
+.owl-slider-1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 10px 0;
+  width: 100%;
+  height: 260px;
+}
+
+.photo-style {
+  width: 124px;
+  height: 124px;
+}
+
+.form-text {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 20px;
+
+}
+
+.text-first {
+  font-family: Comfortaa;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 150%;
   text-align: center;
-  -webkit-tap-highlight-color: transparent; }
-  .owl-theme .owl-dots .owl-dot {
-    display: inline-block;
-    zoom: 1;
-    *display: inline; }
-    .owl-theme .owl-dots .owl-dot span {
-      width: 10px;
-      height: 10px;
-      margin: 5px 7px;
-      background: #D6D6D6;
-      display: block;
-      -webkit-backface-visibility: visible;
-      transition: opacity 200ms ease;
-      border-radius: 30px; }
-    .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-      background: #869791; }
+  color: #333333;
+  max-width: 380px;
+}
+
+.green {
+  margin-left: 7px;
+  color: #199C3D;
+}
+
+.owl-carousel.owl-theme-1 .owl-item img {
+  width: auto;
+}
+
+ /*********slider.owl-theme-2**********/
+
+.popular-articles {
+  margin-bottom: 200px;
+}
+
+.owl-slider-2 {
+  display: flex;
+  width: 100%;
+}
+
+.owl-carousel.owl-theme-2 .owl-nav {
+  height: 0;
+}
+
+.owl-carousel.owl-theme-2 .owl-nav button span {
+  font-size: 0;
+}
+
+.owl-theme.owl-theme-2 .owl-nav {
+  margin-top: 0;
+}
+
+.owl-carousel.owl-theme-2 .owl-nav button::before {
+  content: "";
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 41px;
+  height: 12px;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 50%;
+}
+
+.owl-carousel.owl-theme-2 .owl-nav button.owl-prev::before {
+  background-image: url('/img/icon/prev_slider_2.svg');
+  left: 3px;
+  transform: translate(-100%, -50%);
+}
+
+.owl-carousel.owl-theme-2 .owl-nav button.owl-next::before {
+  background-image: url('/img/icon/next_slider_2.svg');
+  right: 3px;
+  transform: translate(100%, -50%);
+  background-size: contain;
+}
+
+.owl-carousel.owl-theme-2 .owl-nav {
+  display: flex;
+}
+
+.owl-carousel.owl-theme-2 .owl-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  position: absolute;
+  left: 50%;
+  bottom: -20px;
+  transform: translate(-50%, 100%);
+}
+
+.owl-carousel.owl-theme-2 button.owl-dot {
+  width: 7px;
+  height: 7px;
+  padding: 4.5px;
+  background: #ECECEC;
+  border-radius: 50%;
+  margin-right: 15.5px;
+}
+
+.owl-carousel.owl-theme-2 button.owl-dot.active {
+  width: 16px;
+  height: 16px;
+  padding: 0;
+  background: #EB6171;
+}
+
+.owl-dots.owl-theme-2 {
+  display: flex;
+}
+
+.owl-theme.owl-theme-2 .owl-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
