--- a/css/style-funtome-blog.css
+++ b/css/style-funtome-blog.css
@@ -52,8 +52,27 @@
     margin-left: 0;
 }
 
-.blog-menu-nav li:hover {
+.link-news {
+    position: relative;
+}
 
+.nav-link:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    opacity: 0;
+    background-color: #F02B53;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    transition: opacity .1s linear;
+
+}
+
+.nav-link:hover::after {
+    opacity: 1;
 }
 
 /*************News*************/
