--- a/css/style-funtome-blog-str-first.css
+++ b/css/style-funtome-blog-str-first.css
@@ -111,12 +111,12 @@
     margin-left: 67px;;
 }
 
-.blok-article {
+.blok-search {
     margin-bottom: 50px;
 }
 
-.blok-search {
-    margin-bottom: 50px;
+.blok-categories {
+    margin: 50px 0;
 }
 
 .article-text {
@@ -185,10 +185,6 @@
     color: #5E6973;
 }
 
-.nav-categories-blok {
-    
-}
-
 .nav-categories-blok li::after {
     content: "";
     width: 398px;
@@ -204,4 +200,20 @@
 .nav-categories-blok li:first-child::after {
     display: none;
 }
+
+.nav-icon {
+    display: flex;
+    align-items: flex-end;
+}
+
+.nav-icon-link {
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-icon-link-img {
+    justify-content: center;
+    margin-right: 15px;
+}
+
 
