--- a/css/style-funtome-blog-str-first.css
+++ b/css/style-funtome-blog-str-first.css
@@ -68,6 +68,7 @@
 .text-content {
     display: flex;
     margin-top: 35px;
+    margin-bottom: 70px;
 }
 
 .news-content {
@@ -217,3 +218,133 @@
 }
 
 
+/* section-comments */
+
+.section-comments {
+    margin-bottom: 100px;
+}
+
+.title-comments {
+    display: flex;
+    margin-bottom: 32px;
+}
+
+.title-comments-style {
+    font-family: 'Comfortaa', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 150%;
+    text-transform: capitalize;
+    color: #F02B53;
+}
+
+.bold-style {
+    font-weight: 700;
+}
+
+.comments-form {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+
+.add-comments {
+    width: 920px;
+    height: 121px;
+    display: flex;
+    justify-content: center;
+    border: 2px solid #FFFFFF;
+    box-shadow: 0px 0px 4px #DCDCDC;
+    border-radius: 18px;
+}
+
+.comments-text {
+    font-family: 'Comfortaa', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 150%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    color: #5E6973;
+}
+
+.comments-form-text {
+   padding: 20px 0;
+}
+
+.sing-in-text {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 25px;
+    letter-spacing: 0.5px;
+    color: #333333;
+}
+
+.text-green {
+    font-weight: 500;
+    color: #199C3D;
+}
+
+/* user-comments-block */
+
+.user-comments {
+    display: flex;
+}
+
+.block-comments {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+
+.user-name {
+    display: flex;
+    align-items: flex-end;
+   
+}
+
+.name {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    color: #C87283;
+}
+
+.data {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    color: #888888;
+
+}
+
+.user-text {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 135%;
+    color: #333333;
+
+}
+
+.user-replay {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    color: #888888;
+
+}
