--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ a {
 }
 
 .nav-list.black-style li:hover {
-    color: #FFFFFF;;
+    color: #FFFFFF;
 }
 
 /*===================intro=================*/
